--- a/src/components/DrinksComponent.css
+++ b/src/components/DrinksComponent.css
@@ -24,7 +24,9 @@ body {
   font-family: var(--fontFamily);
 }
 
-
+.drinks-wrapper>h1 {
+  text-align: center;
+}
 
 img {
   max-width: 100%;
@@ -39,7 +41,7 @@ img {
 .product {
   position: relative;
   width: 395px;
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
   background-color: var(--black);
   border: 10px solid transparent;
   border-radius: 1rem;
@@ -71,10 +73,9 @@ img {
 }
 
 .product__infos {
-  /* display: flex; */
+  display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 20px 0;
+  gap: 0.5rem;
 }
 
 .product__title {
@@ -101,20 +102,21 @@ img {
   text-transform: uppercase;
 }
 
-.productlist__wrapper{
-    display:flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    margin: 2rem 2rem;
+.productlist__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin: 2rem 2rem;
 }
 
-.product__list{
-    display: flex;
-    gap: 1rem;
-    flex-wrap: wrap;
+.product__list {
+  justify-content: center;
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
 }
 
-.drink-choice{
+.drink-choice {
   max-width: 12rem;
 }
 
@@ -124,41 +126,41 @@ img {
 
 /*----------------------------------------------------------------*/
 .product {
-    container-name: product;
-  }
-  
-  /* -------- is new -------- */
-  @container style(--isNew: true) {
-    .product {
-      border-color: var(--primary);
-  
-      &::before {
-        content: "🔥 new";
-        background-color: var(--primary);
-      }
-    }
-  }
-  
-  /* ------ is popular ------ */
-  @container style(--isPopular: true) {
-    .product {
-      border-color: var(--secondary);
-  
-      &::before {
-        content: "⭐ popular";
-        background-color: var(--secondary);
-      }
-    }
-  }
+  container-name: product;
+}
 
-    /* ------ is Recommended ------ */
-  @container style(--isRecommended: true) {
-    .product {
-      border-color: #0c0c0c;
-  
-      &::before {
-        content: "🔥Rekommenderas";
-        background-color:  #000000;
-      }
+/* -------- is new -------- */
+@container style(--isNew: true) {
+  .product {
+    border-color: var(--primary);
+
+    &::before {
+      content: "🔥 new";
+      background-color: var(--primary);
     }
-  } 
+  }
+}
+
+/* ------ is popular ------ */
+@container style(--isPopular: true) {
+  .product {
+    border-color: var(--secondary);
+
+    &::before {
+      content: "⭐ popular";
+      background-color: var(--secondary);
+    }
+  }
+}
+
+/* ------ is Recommended ------ */
+@container style(--isRecommended: true) {
+  .product {
+    border-color: #0c0c0c;
+
+    &::before {
+      content: "🔥Rekommenderas";
+      background-color: #000000;
+    }
+  }
+}
