--- a/src/components/SidesComponent.css
+++ b/src/components/SidesComponent.css
@@ -19,9 +19,10 @@
     justify-content: space-between; /* To push title to left and price to right */
     align-items: center; /* To vertically center the content */
     padding: 10px;
+    margin-bottom: 4px;
+    margin-top: 4px;
     border: none;
     background-color: transparent;
-    margin-bottom: 5px;
 }
 
 .sidesButton span:nth-child(2){
